--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,8 +2,8 @@ version: '3.4'
 services:
   blackbox:
     image: prom/blackbox-exporter:latest
-      #ports:
-      #- 9115:9115/tcp
+    ports:
+      - 9115:9115/tcp
     expose:
       - 9115/tcp
     restart: unless-stopped
@@ -26,8 +26,8 @@ services:
       - '--web.console.libraries=/etc/prometheus/console_libraries'
       - '--web.console.templates=/etc/prometheus/consoles'
       - '--web.enable-lifecycle'
-        #    ports:
-        #- 9090:9090
+    ports:
+      - 9090:9090
   alertmanager:
     image: prom/alertmanager:latest
     container_name: alertmanager
