--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -4,6 +4,12 @@ global:
 rule_files:
   - 'alerts.yml'
 
+alerting:
+  alertmanagers:
+    - scheme: http
+      static_configs:
+        - targets: ['alertmanager:9093']
+
 scrape_configs:
   - job_name: 'blackbox_http'
     scrape_timeout: 30s
